# OpeningExplorer

./: README.md  pgn  pgn.1  pyproject.toml
src/: app.py  chess_trainer.py  config.py  constants.py  fetcher.py  pgn_parser.py
src/data_import/: extractor.py  fetcher.py  pgn.py
src/explorer/: game_tree.py  pgn.py  player.py  position_node.py
src/preprocess/: fetcher.py  regextractor.py
src/trainer/: game_tree.py  pgn.py  player.py
tests/: conftest.py
tests/units/: test_chess_trainer.py  test_extractor.py  test_fetcher.py  test_game_tree.py  test_pgn_parser.py  test_regextractor.py
tests/units/data_examples/: complete_pgn.txt  dummy_pgn.txt  example.csv  example_player.csv
