[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry_core>=1.1.12"]

[tool.poetry]
authors = [
     "Marc LF"
]
description = "Tool to find weaknesses in your chess game!"
name = "chess-trainer"
packages = [{ include = "src" }]
version = "0.0.1"

[tool.poetry.dependencies]
python = "~3.10"
requests = "2.31.0"
pandas = "2.0.2"
dash = "2.10.2"
chess = "1.9.4"
pybase64 = "1.2.3" 
CairoSVG = "2.7.0"
dash-bootstrap-components = "1.4.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.2"
pydocstyle = "6.3.0"
pylint = "2.17.4" 

[tool.pytest.ini_options]
pythonpath = [
  "."
]